2011-03-04 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.62
	* Added find dialog

2011-02-14 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.61
	* fixed windows only problem with DIR statement
	* restructured and documented the doc tree
	* worked on the windows installer to allow for optional install of offline help and examples

2011-02-14 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.60
	* added MSEC function to return program running time in milliseconds

2011-01-20 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.59
	* added option to use espeak for TTS from shell not as a library
              * update documentation in BASIC256.pro and COMPILING.txt

2011-01-07 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.58
	* added OSTYPE function to return the type of OS this was compiled

2011-01-06 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.57 (473)
	* added IMPLODE to change an array to a string
	* updated Russian translation

2011-01-05 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.56 (469)
	* added INSTRX() to return position of a Regular Expression
	* added REPLACEX() function to find an regular expression and replace with a string
	* added COUNTX() function to retuen number of occourances of a regular expression
	* added EXPLODEX() function to split a string into a string or numeric array on a regular expression

2011-01-03 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.55 (468)
	* allow assignment of indirect list of values {} to redimision an array to the correct size
	* added two optional arguments to INSTR() - Start and IgnoreCase
	* added Unicode safe string REPLACE() function
	* added Unicode safe substring count COUNT() function
	* added EXPLODE() function to split a string into a string or numeric array

2011-01-02 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.54 (467)
	* added dir() function

2010-12-31 sergey irupin <lamp@altlinux.org> 0.9.6.53 (466)
	* add offline help system
	* replace About window
	* fixed highlighting of keywords
